--- a/html/insercionAlumno.html
+++ b/html/insercionAlumno.html
@@ -15,7 +15,7 @@
     </div>
 
     <h1 class="h1_class">Ingrese los siguientes datos</h1>
-    <form method="post" action="../php/insertaralunos.php" id="form_padd">
+    <form method="post" action="../php/insertarAlumnos.php" id="form_padd">
         <input type="text" name="nExpediente" placeholder="Numero de expediente" size="40" class="estiloInput">
         <br /> <br />
         <input type="text" name="Nombre" placeholder="Ingrese Nombre" size="40" class="estiloInput">
