--- a/html/insercionAlumno.html
+++ b/html/insercionAlumno.html
@@ -22,9 +22,11 @@
         <br /> <br />
         <input type="text" name="Apellido" placeholder="Ingrese Apellido" size="40" class="estiloInput">
         <br /> <br />
+        Ingrese la de fecha de Nacimiento
         <input type="date" name="FechaNacimiento" placeholder="Ingrese fecha de nacimiento" size="40" class="estiloInput">
         <br /> <br />
-        <input type="date" name="FechaPago" placeholder="Fecha de pago" size="40" class="estiloInput">
+        Ingrese la de fecha de Registro
+        <input type="date" name="FechaRegistro" placeholder="Fecha de Registro" size="40" class="estiloInput">
         <br /> <br />
         <input type="password" name="Contrasena" placeholder="Ingrese stock" size="40" class="estiloInput">
         <br /> <br />
