--- a/html/servicioAlumno.html
+++ b/html/servicioAlumno.html
@@ -56,6 +56,9 @@
                         <input type="submit" value="LOGIN">
 
                     </form>
+                    <form action="insercionAlumno.html" method="POST">
+                        
+                    </form>
                 </div>
 
             </div>
