--- a/html/servicioAlumno.html
+++ b/html/servicioAlumno.html
@@ -56,8 +56,8 @@
                         <input type="submit" value="LOGIN">
 
                     </form>
-                    <form action="insercionAlumno.html" method="POST">
-                        
+                    <form class="formularioLogin" action="insercionAlumno.html" method="POST">
+                        <input type="submit" value="Registrarse">
                     </form>
                 </div>
 
