--- a/html/servicioAlumno.html
+++ b/html/servicioAlumno.html
@@ -46,7 +46,7 @@
                         </h1>
                     </div>
 
-                    <form class="formularioLogin" action="insercionAlumno.html" method="POST">
+                    <form class="formularioLogin" action="../php/listaModulos.php" method="POST">
                         USUARIO:
                         <input type="text" name="nombre">
                         <br> CONTRASEÑA:
