--- a/html/insercionModulo.html
+++ b/html/insercionModulo.html
@@ -16,15 +16,10 @@
 
     <h1 class="h1_class">Ingrese los siguientes datos</h1>
     <form method="post" action="insertaralunos.php" id="form_padd">
-        <input type="text" name="nExpediente" placeholder="Numero de expediente" size="40" class="estiloInput">
+
+        <input type="text" name="idModulo" placeholder="Ingrese Modulo" size="40" class="estiloInput">
         <br /> <br />
-        <input type="text" name="Apellido" placeholder="Ingrese Apellido" size="40" class="estiloInput">
-        <br /> <br />
-        <input type="date" name="Fecha de nacimiento" placeholder="Ingrese fecha de nacimiento" size="40" class="estiloInput">
-        <br /> <br />
-        <input type="date" name="Fecha de pago" placeholder="Fecha de pago" size="40" class="estiloInput">
-        <br /> <br />
-        <input type="password" name="Contraseña" placeholder="Ingrese stock" size="40" class="estiloInput">
+        <input type="date" name="descripcion" placeholder="Descripción" size="40" class="estiloInput">
         <br /> <br />
         <input type="submit" name="boton" value="Insertar" size="40" class="estiloInput">
     </form>
