--- a/html/insercionModulo.html
+++ b/html/insercionModulo.html
@@ -3,23 +3,23 @@
 <head>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
     <link rel="stylesheet" href="styles/estiloPrincipal.css" />
-    <title>REGISTRAR NUEVO alumno</title>
+    <title>REGISTRAR NUEVO MODULO</title>
 </head>
 
 <body>
 
     </div>
     <section style="background-color:#D8D8D8" class="clear_fix">
-        <h1 align="center" style="font-size: 80px;">REGISTRAR alumno</h1>
+        <h1 align="center" style="font-size: 80px;">REGISTRAR MODULO</h1>
     </section>
     </div>
 
     <h1 class="h1_class">Ingrese los siguientes datos</h1>
-    <form method="post" action="registroModulo.php" id="form_padd">
+    <form method="post" action="/php/registroModulo.php" id="form_padd">
 
         <input type="text" name="idModulo" placeholder="Ingrese Modulo" size="40" class="estiloInput">
         <br /> <br />
-        <input type="date" name="descripcion" placeholder="Descripción" size="40" class="estiloInput">
+        <input type="text" name="descripcion" placeholder="Descripción" size="40" class="estiloInput">
         <br /> <br />
         <input type="submit" name="boton" value="Insertar" size="40" class="estiloInput">
     </form>
