--- a/html/insercionModulo.html
+++ b/html/insercionModulo.html
@@ -15,7 +15,7 @@
     </div>
 
     <h1 class="h1_class">Ingrese los siguientes datos</h1>
-    <form method="post" action="/php/registroModulo.php" id="form_padd">
+    <form method="post" action="../php/insertarModulo.php" id="form_padd">
 
         <input type="text" name="idModulo" placeholder="Ingrese Modulo" size="40" class="estiloInput">
         <br /> <br />
