--- a/html/insercionProfesor.html
+++ b/html/insercionProfesor.html
@@ -16,17 +16,17 @@
 
     <h1 class="h1_class">Ingrese los siguientes datos</h1>
     <form method="post" action="insertaralunos.php" id="form_padd">
-        <input type="text" name="idProfesor" placeholder="Numero de expediente" size="40" class="estiloInput">
+        <input type="text" name="idProfesor" placeholder="Numero de expediente" size="40" class="estiloInput" required>
         <br /> <br />
-        <input type="text" name="Cedula" placeholder="Ingrese Apellido" size="40" class="estiloInput">
+        <input type="text" name="Cedula" placeholder="Ingrese Apellido" size="40" class="estiloInput" required>
         <br /> <br />
-        <input type="text" name="Nmbre" placeholder="Ingrese fecha de nacimiento" size="40" class="estiloInput">
+        <input type="text" name="Nmbre" placeholder="Ingrese fecha de nacimiento" size="40" class="estiloInput" required>
         <br /> <br />
-        <input type="text" name="Direccion" placeholder="Fecha de pago" size="40" class="estiloInput">
+        <input type="text" name="Direccion" placeholder="Fecha de pago" size="40" class="estiloInput" required>
         <br /> <br />
-        <input type="text" name="Telefono" placeholder="Ingrese stock" size="40" class="estiloInput">
+        <input type="text" name="Telefono" placeholder="Ingrese stock" size="40" class="estiloInput" required>
         <br /> <br />
-        <input type="text" name="Contrasena" placeholder="Ingrese stock" size="40" class="estiloInput">
+        <input type="text" name="Contrasena" placeholder="Ingrese stock" size="40" class="estiloInput" required>
         <br /> <br />
         <input type="submit" name="boton" value="Insertar" size="40" class="estiloInput">
     </form>
